--- a/utility/libobj/Makefile.am
+++ b/utility/libobj/Makefile.am
@@ -3,3 +3,5 @@ noinst_LTLIBRARIES = liblibobject.la
 liblibobject_la_SOURCES = libobj.c
 
 liblibobject_la_LIBADD = @LTLIBOBJS@
+
+EXTRA_DIST = memcmp.c _vsnprintf.c
