included odewrapper.h in headers section for distribution

--- a/lib/oxygen/Makefile.am
+++ b/lib/oxygen/Makefile.am
@@ -183,6 +183,7 @@ physicsserver/collider.h \
 physicsserver/collisionhandler.h \
 physicsserver/contactjointhandler.h \
 physicsserver/odeobject.h \
+physicsserver/odewrapper.h \
 physicsserver/physicsserver.h \
 physicsserver/planecollider.h \
 physicsserver/raycollider.h \
