--- a/plugin/inputsdl/Makefile.am
+++ b/plugin/inputsdl/Makefile.am
@@ -21,5 +21,5 @@ timersdl_c.cpp
 # so we don't need the "lib" prefix in the module name
 inputsdl_la_LDFLAGS = -module -version-info 0:0:0
 
-AM_CPPFLAGS = -I${top_srcdir}/lib @RUBY_CPPFLAGS@
+AM_CPPFLAGS = -I${top_srcdir}/lib @RUBY_CPPFLAGS@ @SDL_CPPFLAGS@
 
