--- a/app/simspark/Makefile.am
+++ b/app/simspark/Makefile.am
@@ -3,7 +3,7 @@ bin_PROGRAMS = simspark
 endif
 
 if DEBUG
-LDADD = -lpthread -lGL -lGLU -lglut \
+LDADD = -lpthread  \
 	${top_srcdir}/lib/spark/libspark_debug.la \
 	${top_srcdir}/lib/kerosin/libkerosin_debug.la \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
@@ -11,7 +11,7 @@ LDADD = -lpthread -lGL -lGLU -lglut \
         ${top_srcdir}/lib/salt/libsalt_debug.la
 simspark_CXXFLAGS = -O -g -W -Wall
 else
-LDADD = -lpthread -lGL -lGLU -lglut \
+LDADD = -lpthread  \
 	${top_srcdir}/lib/spark/libspark.la \
 	${top_srcdir}/lib/kerosin/libkerosin.la \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
@@ -21,12 +21,12 @@ simspark_CXXFLAGS = -O2
 endif
 
 AM_CPPFLAGS = -I${top_srcdir}/lib -I${top_srcdir}/utility \
-              @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
+              @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@ @SDL_CPPFLAGS@
 
-AM_LDFLAGS  = @RUBY_LDFLAGS@
+AM_LDFLAGS  = @RUBY_LDFLAGS@ @SDL_LDFLAGS@ @IL_LDFLAGS@ @GL_LDFLAGS@ 
 
 simspark_SOURCES = \
-	main.cpp
+	main.cpp 
 
 dist_pkgdata_DATA = \
 	simspark.rb \
