- changed hard coded compile and linker options to meta-variables created by configure

--- a/app/rcssmonitor3d/kerosin/Makefile.am
+++ b/app/rcssmonitor3d/kerosin/Makefile.am
@@ -2,7 +2,7 @@ if BUILD_KEROSIN
 bin_PROGRAMS = rcssmonitor3D-kerosin
 
 if DEBUG
-LDADD = -lpthread -lGL -lGLU -lglut -lXi -lXmu\
+LDADD = -lpthread \
 	${top_srcdir}/lib/spark/libspark_debug.la \
 	${top_srcdir}/lib/kerosin/libkerosin_debug.la \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
@@ -11,7 +11,7 @@ LDADD = -lpthread -lGL -lGLU -lglut -lXi -lXmu\
 	${top_srcdir}/app/rcssmonitor3d/lib/librcssmonitor3D.la 
 rcssmonitor3D_kerosin_CXXFLAGS = -O -g -W -Wall
 else
-LDADD = -lpthread -lGL -lGLU -lglut -lXi -lXmu\
+LDADD = -lpthread \
 	${top_srcdir}/lib/spark/libspark.la \
 	${top_srcdir}/lib/kerosin/libkerosin.la \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
@@ -21,13 +21,14 @@ LDADD = -lpthread -lGL -lGLU -lglut -lXi -lXmu\
 rcssmonitor3D_kerosin_CXXFLAGS = -O2
 endif
 
+# -lXi -lXmu
 endif
 
 AM_CPPFLAGS = \
 	-I${top_srcdir}/app/rcssmonitor3d/lib -I${top_srcdir}/lib\
-	-I${top_srcdir}/plugin -I${top_srcdir}/utility @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
+	-I${top_srcdir}/plugin -I${top_srcdir}/utility @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@ @SDL_CPPFLAGS@
 
-AM_LDFLAGS  = @RUBY_LDFLAGS@
+AM_LDFLAGS  = @RUBY_LDFLAGS@ @SDL_LDFLAGS@ @IL_LDFLAGS@ @GL_LDFLAGS@
 
 rcssmonitor3D_kerosin_SOURCES = \
 	main.cpp \
