--- a/app/rcssmonitor3d/lite/Makefile.am
+++ b/app/rcssmonitor3d/lite/Makefile.am
@@ -1,14 +1,14 @@
 bin_PROGRAMS = rcssmonitor3D-lite
 
 if DEBUG
-LDADD = -lpthread -lGL -lGLU -lglut \
+LDADD = -lpthread  \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
         ${top_srcdir}/lib/salt/libsalt_debug.la \
 	${top_srcdir}/app/rcssmonitor3d/lib/librcssmonitor3D.la 
 rcssmonitor3D_lite_CXXFLAGS = -O -g -W -Wall
 else
-LDADD = -lpthread -lGL -lGLU -lglut \
+LDADD = -lpthread  \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
         ${top_srcdir}/lib/salt/libsalt.la \
@@ -16,8 +16,8 @@ LDADD = -lpthread -lGL -lGLU -lglut \
 rcssmonitor3D_lite_CXXFLAGS = -O2
 endif
 
-AM_CPPFLAGS = -I${top_srcdir}/app/rcssmonitor3d/lib -I${top_srcdir}/lib -I${top_srcdir}/plugin -I${top_srcdir}/utility @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
-AM_LDFLAGS  = @RUBY_LDFLAGS@
+AM_CPPFLAGS = -I${top_srcdir}/app/rcssmonitor3d/lib -I${top_srcdir}/lib -I${top_srcdir}/plugin -I${top_srcdir}/utility @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@ @SDL_CPPFLAGS@
+AM_LDFLAGS  = @RUBY_LDFLAGS@ @SDL_LDFLAGS@ @IL_LDFLAGS@ @GL_LDFLAGS@
 
 rcssmonitor3D_lite_SOURCES = \
 	main.cpp \
