- changed hard coded compile and linker options to meta-variables created by configure

--- a/app/agentspark/Makefile.am
+++ b/app/agentspark/Makefile.am
@@ -3,7 +3,7 @@ bin_PROGRAMS = agentspark
 endif
 
 if DEBUG
-LDADD = -lpthread -lGL -lGLU -lglut \
+LDADD = -lpthread  \
 	${top_srcdir}/lib/spark/libspark_debug.la \
 	${top_srcdir}/lib/kerosin/libkerosin_debug.la \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
@@ -12,7 +12,7 @@ LDADD = -lpthread -lGL -lGLU -lglut \
 	${top_srcdir}/utility/rcssnet/librcssnet3D.la
 agentspark_CXXFLAGS = -O -g -W -Wall
 else
-LDADD = -lpthread -lGL -lGLU -lglut \
+LDADD = -lpthread  \
 	${top_srcdir}/lib/spark/libspark.la \
 	${top_srcdir}/lib/kerosin/libkerosin.la \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
@@ -22,8 +22,8 @@ agentspark_CXXFLAGS = -O2
 endif
 
 AM_CPPFLAGS = -I${top_srcdir}/lib -I${top_srcdir}/utility \
-              @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
-AM_LDFLAGS  = @RUBY_LDFLAGS@
+              @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@ @SDL_CPPFLAGS@
+AM_LDFLAGS  = @RUBY_LDFLAGS@ @SDL_LDFLAGS@ @IL_LDFLAGS@ @GL_LDFLAGS@
 
 agentspark_SOURCES = main.cpp \
 	behavior.h \
