--- a/Makefile.am
+++ b/Makefile.am
@@ -10,7 +10,7 @@ doc-recursive:
 
 CLEANFILES = 
 
-EXTRA_DIST = README-soccer
+EXTRA_DIST = README-soccer README.MacOSX
 
 EXTRA_SRC_DISTS =
 EXTRA_BIN_DISTS =
