- added entry for the objimporter subdir

--- a/plugin/Makefile.am
+++ b/plugin/Makefile.am
@@ -5,6 +5,7 @@ SUBDIRS = \
 	  gyrorateperceptor \
 	  inputsdl \
 	  monitortest \
+	  objimporter \
 	  perfectvisionperceptor \
 	  collisionperceptor \
 	  sexpparser \
