applied Yuan's timer patch as of 05/31/07

--- a/app/simspark/Makefile.am
+++ b/app/simspark/Makefile.am
@@ -8,7 +8,8 @@ LDADD = -lpthread  \
 	${top_srcdir}/lib/kerosin/libkerosin_debug.la \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
-        ${top_srcdir}/lib/salt/libsalt_debug.la
+        ${top_srcdir}/lib/salt/libsalt_debug.la \
+	-l@BOOST_THREADS_LIB@
 simspark_CXXFLAGS = -O -g -W -Wall
 else
 LDADD = -lpthread  \
@@ -16,7 +17,8 @@ LDADD = -lpthread  \
 	${top_srcdir}/lib/kerosin/libkerosin.la \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
-        ${top_srcdir}/lib/salt/libsalt.la
+        ${top_srcdir}/lib/salt/libsalt.la \
+	-l@BOOST_THREADS_LIB@
 simspark_CXXFLAGS = -O2
 endif
 
