--- a/app/simulator/Makefile.am
+++ b/app/simulator/Makefile.am
@@ -6,13 +6,15 @@ if DEBUG
 LDADD = \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
-        ${top_srcdir}/lib/salt/libsalt_debug.la
+        ${top_srcdir}/lib/salt/libsalt_debug.la \
+	-l@BOOST_THREADS_LIB@
 rcssserver3D_CXXFLAGS = -O -g -W -Wall
 else
 LDADD = \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
-        ${top_srcdir}/lib/salt/libsalt.la 
+        ${top_srcdir}/lib/salt/libsalt.la \
+	-l@BOOST_THREADS_LIB@
 rcssserver3D_CXXFLAGS = -O2
 endif
 
