--- a/app/inputtest/Makefile.am
+++ b/app/inputtest/Makefile.am
@@ -7,14 +7,16 @@ LDADD = \
 	${top_srcdir}/lib/kerosin/libkerosin_debug.la \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
-        ${top_srcdir}/lib/salt/libsalt_debug.la 
+        ${top_srcdir}/lib/salt/libsalt_debug.la \
+	-l@BOOST_THREADS_LIB@
 inputtest_CXXFLAGS = -O -g -W -Wall
 else
 LDADD = \
 	${top_srcdir}/lib/kerosin/libkerosin.la \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
-        ${top_srcdir}/lib/salt/libsalt.la 
+        ${top_srcdir}/lib/salt/libsalt.la \
+	-l@BOOST_THREADS_LIB@
 inputtest_CXXFLAGS = -O2
 endif
 
