--- a/app/monitorspark/Makefile.am
+++ b/app/monitorspark/Makefile.am
@@ -9,7 +9,8 @@ LDADD = -lpthread  \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
         ${top_srcdir}/lib/salt/libsalt_debug.la \
-	${top_srcdir}/utility/rcssnet/librcssnet3D.la
+	${top_srcdir}/utility/rcssnet/librcssnet3D.la \
+	-l@BOOST_THREADS_LIB@
 monitorspark_CXXFLAGS = -O -g -W -Wall
 else
 LDADD = -lpthread  \
@@ -17,7 +18,8 @@ LDADD = -lpthread  \
 	${top_srcdir}/lib/kerosin/libkerosin.la \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
-        ${top_srcdir}/lib/salt/libsalt.la
+        ${top_srcdir}/lib/salt/libsalt.la \
+	-l@BOOST_THREADS_LIB@
 monitorspark_CXXFLAGS = -O2
 endif
 
