- changed file names to load the new jersey textures

--- a/app/simspark/materials-textures.rb.in
+++ b/app/simspark/materials-textures.rb.in
@@ -78,7 +78,7 @@ material.setAmbient(0.2,0.01,0.0,1.0)
 material = new('kerosin/Material2DTexture', $serverPath+'material/matGrass');
 material.setDiffuse(1.0,1.0,1.0,1.0)
 material.setAmbient(0.5,0.5,0.5,1.0)
-material.setDiffuseTexture($texturedir+'grass.tga')
+material.setDiffuseTexture($texturedir+'grass-w-lines.tga')
 
 #----------------------------------------------------------------
 # left team
@@ -94,57 +94,57 @@ material.setAmbient(0.0,0.2,0.15,1.0)
 material = new('kerosin/Material2DTexture', $serverPath+'material/matLeft1');
 material.setDiffuse(0.0,0.75,1.0,1.0)
 material.setAmbient(0.0,0.2,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum01.png')
+material.setDiffuseTexture($texturedir+'torso-left-01.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matLeft2');
 material.setDiffuse(0.0,0.75,1.0,1.0)
 material.setAmbient(0.0,0.2,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum02.png')
+material.setDiffuseTexture($texturedir+'torso-left-02.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matLeft3');
 material.setDiffuse(0.0,0.75,1.0,1.0)
 material.setAmbient(0.0,0.2,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum03.png')
+material.setDiffuseTexture($texturedir+'torso-left-03.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matLeft4');
 material.setDiffuse(0.0,0.75,1.0,1.0)
 material.setAmbient(0.0,0.2,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum04.png')
+material.setDiffuseTexture($texturedir+'torso-left-04.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matLeft5');
 material.setDiffuse(0.0,0.75,1.0,1.0)
 material.setAmbient(0.0,0.2,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum05.png')
+material.setDiffuseTexture($texturedir+'torso-left-05.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matLeft6');
 material.setDiffuse(0.0,0.75,1.0,1.0)
 material.setAmbient(0.0,0.2,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum06.png')
+material.setDiffuseTexture($texturedir+'torso-left-06.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matLeft7');
 material.setDiffuse(0.0,0.75,1.0,1.0)
 material.setAmbient(0.0,0.2,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum07.png')
+material.setDiffuseTexture($texturedir+'torso-left-07.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matLeft8');
 material.setDiffuse(0.0,0.75,1.0,1.0)
 material.setAmbient(0.0,0.2,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum08.png')
+material.setDiffuseTexture($texturedir+'torso-left-08.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matLeft9');
 material.setDiffuse(0.0,0.75,1.0,1.0)
 material.setAmbient(0.0,0.2,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum09.png')
+material.setDiffuseTexture($texturedir+'torso-left-09.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matLeft10');
 material.setDiffuse(0.0,0.75,1.0,1.0)
 material.setAmbient(0.0,0.2,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum10.png')
+material.setDiffuseTexture($texturedir+'torso-left-10.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matLeft11');
 material.setDiffuse(0.0,0.75,1.0,1.0)
 material.setAmbient(0.0,0.2,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum11.png')
+material.setDiffuseTexture($texturedir+'torso-left-11.png')
 
 #----------------------------------------------------------------
 # right team
@@ -159,55 +159,55 @@ material.setAmbient(0.2,0.0,0.15,1.0)
 material = new('kerosin/Material2DTexture', $serverPath+'material/matRight1');
 material.setDiffuse(1.0,0.0,0.75,1.0)
 material.setAmbient(0.2,0.0,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum01.png')
+material.setDiffuseTexture($texturedir+'torso-right-01.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matRight2');
 material.setDiffuse(1.0,0.0,0.75,1.0)
 material.setAmbient(0.2,0.0,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum02.png')
+material.setDiffuseTexture($texturedir+'torso-right-02.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matRight3');
 material.setDiffuse(1.0,0.0,0.75,1.0)
 material.setAmbient(0.2,0.0,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum03.png')
+material.setDiffuseTexture($texturedir+'torso-right-03.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matRight4');
 material.setDiffuse(1.0,0.0,0.75,1.0)
 material.setAmbient(0.2,0.0,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum04.png')
+material.setDiffuseTexture($texturedir+'torso-right-04.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matRight5');
 material.setDiffuse(1.0,0.0,0.75,1.0)
 material.setAmbient(0.2,0.0,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum05.png')
+material.setDiffuseTexture($texturedir+'torso-right-05.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matRight6');
 material.setDiffuse(1.0,0.0,0.75,1.0)
 material.setAmbient(0.2,0.0,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum06.png')
+material.setDiffuseTexture($texturedir+'torso-right-06.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matRight7');
 material.setDiffuse(1.0,0.0,0.75,1.0)
 material.setAmbient(0.2,0.0,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum07.png')
+material.setDiffuseTexture($texturedir+'torso-right-07.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matRight8');
 material.setDiffuse(1.0,0.0,0.75,1.0)
 material.setAmbient(0.2,0.0,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum08.png')
+material.setDiffuseTexture($texturedir+'torso-right-08.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matRight9');
 material.setDiffuse(1.0,0.0,0.75,1.0)
 material.setAmbient(0.2,0.0,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum09.png')
+material.setDiffuseTexture($texturedir+'torso-right-09.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matRight10');
 material.setDiffuse(1.0,0.0,0.75,1.0)
 material.setAmbient(0.2,0.0,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum10.png')
+material.setDiffuseTexture($texturedir+'torso-right-10.png')
 
 material = new('kerosin/Material2DTexture', $serverPath+'material/matRight11');
 material.setDiffuse(1.0,0.0,0.75,1.0)
 material.setAmbient(0.2,0.0,0.15,1.0)
-material.setDiffuseTexture($texturedir+'unum11.png')
+material.setDiffuseTexture($texturedir+'torso-right-11.png')
 
