- added soccerbottorso.rsg for distribution

--- a/app/simspark/Makefile.am
+++ b/app/simspark/Makefile.am
@@ -73,6 +73,7 @@ EXTRA_DIST = \
 	rsg/agent/leggedsphere.rsg \
 	rsg/agent/hoap2.rsg \
 	rsg/agent/soccerbot.rsg \
+	rsg/agent/soccerbottorso.rsg \
 	rsg/agent/soccer.rsg \
 	rsg/agent/flag.rsg \
 	rsg/agent/flag_no_viz.rsg \
