--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,7 @@ app/simspark/Logfiles
 app/simspark/Makefile
 app/simspark/Makefile.in
 app/simspark/simspark
+app/simspark/materials-textures.rb
 app/simulator/.deps
 app/simulator/.libs
 app/simulator/Logfiles
