--- a/plugin/objimporter/Makefile.am
+++ b/plugin/objimporter/Makefile.am
@@ -3,7 +3,7 @@ pkglib_LTLIBRARIES = objimporter.la
 objimporter_la_SOURCES = export.cpp \
 objimporter.cpp objimporter_c.cpp objimporter.h
 
-objimporter_la_LDFLAGS = -module -version-info 0:0:0
+objimporter_la_LDFLAGS = -module -avoid-version
 
 AM_CPPFLAGS = -I${top_srcdir}/lib -I${top_srcdir}/utility @RUBY_CPPFLAGS@
 
