--- a/.gitignore
+++ b/.gitignore
@@ -462,6 +462,12 @@ plugin/soccer/initeffector/Makefile
 plugin/soccer/initeffector/Makefile.in
 plugin/soccer/initeffector/initeffector.la
 plugin/soccer/initeffector/.dirstamp
+plugin/soccer/internalsoccermonitor/.deps
+plugin/soccer/internalsoccermonitor/.libs
+plugin/soccer/internalsoccermonitor/Makefile
+plugin/soccer/internalsoccermonitor/Makefile.in
+plugin/soccer/internalsoccermonitor/*.la
+plugin/soccer/internalsoccermonitor/*.lo
 plugin/soccer/kickeffector/*.la
 plugin/soccer/kickeffector/*.lo
 plugin/soccer/kickeffector/.deps
