added sharedlibrary.cpp (instead of gcc/sharedlibrary); from simspark cvs

--- a/lib/salt/Makefile.am
+++ b/lib/salt/Makefile.am
@@ -24,7 +24,7 @@ frustum.cpp  \
 matrix.cpp  \
 path.cpp  \
 plane.cpp \
-gcc/sharedlibrary.cpp
+sharedlibrary.cpp
 
 libpkginclude_HEADERS = \
 bounds.h   \
