changed BOOST_THREADS_LIB meta variable

--- a/app/agentspark/Makefile.am
+++ b/app/agentspark/Makefile.am
@@ -10,7 +10,7 @@ LDADD = -lpthread  \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
         ${top_srcdir}/lib/salt/libsalt_debug.la \
 	${top_srcdir}/utility/rcssnet/librcssnet3D.la \
-	-l@BOOST_THREADS_LIB@
+	@BOOST_THREADS_LIB@
 agentspark_CXXFLAGS = -O -g -W -Wall
 else
 LDADD = -lpthread  \
@@ -19,7 +19,7 @@ LDADD = -lpthread  \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
         ${top_srcdir}/lib/salt/libsalt.la \
-	-l@BOOST_THREADS_LIB@
+	@BOOST_THREADS_LIB@
 agentspark_CXXFLAGS = -O2
 endif
 
