--- a/app/inputtest/Makefile.am
+++ b/app/inputtest/Makefile.am
@@ -8,7 +8,7 @@ LDADD = \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
         ${top_srcdir}/lib/salt/libsalt_debug.la \
-	-l@BOOST_THREADS_LIB@
+	@BOOST_THREADS_LIB@
 inputtest_CXXFLAGS = -O -g -W -Wall
 else
 LDADD = \
@@ -16,7 +16,7 @@ LDADD = \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
         ${top_srcdir}/lib/salt/libsalt.la \
-	-l@BOOST_THREADS_LIB@
+	@BOOST_THREADS_LIB@
 inputtest_CXXFLAGS = -O2
 endif
 
