--- a/app/rcssmonitor3d/kerosin/Makefile.am
+++ b/app/rcssmonitor3d/kerosin/Makefile.am
@@ -9,7 +9,7 @@ LDADD = -lpthread \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
         ${top_srcdir}/lib/salt/libsalt_debug.la \
 	${top_srcdir}/app/rcssmonitor3d/lib/librcssmonitor3D.la \
-	-l@BOOST_THREADS_LIB@
+	@BOOST_THREADS_LIB@
 rcssmonitor3D_kerosin_CXXFLAGS = -O -g -W -Wall
 else
 LDADD = -lpthread \
@@ -19,7 +19,7 @@ LDADD = -lpthread \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
         ${top_srcdir}/lib/salt/libsalt.la \
 	${top_srcdir}/app/rcssmonitor3d/lib/librcssmonitor3D.la \
-	-l@BOOST_THREADS_LIB@
+	@BOOST_THREADS_LIB@
 rcssmonitor3D_kerosin_CXXFLAGS = -O2
 endif
 
