--- a/app/scenetest/Makefile.am
+++ b/app/scenetest/Makefile.am
@@ -2,19 +2,13 @@ if BUILD_KEROSIN
 noinst_PROGRAMS = scenetest
 endif
 
-all-local:
-	mkdir -p ${srcdir}/sys/
-	rm -f ${srcdir}/sys/script
-	cd ${srcdir}/sys/ && \
-	${LN_S} ../script .
-
 if DEBUG
 LDADD = \
 	${top_srcdir}/lib/kerosin/libkerosin_debug.la \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
         ${top_srcdir}/lib/salt/libsalt_debug.la \
-	-l@BOOST_THREADS_LIB@
+	@BOOST_THREADS_LIB@
 scenetest_CXXFLAGS = -O -g -W -Wall
 else
 LDADD = \
@@ -22,7 +16,7 @@ LDADD = \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
         ${top_srcdir}/lib/salt/libsalt.la \
-	-l@BOOST_THREADS_LIB@
+	@BOOST_THREADS_LIB@
 scenetest_CXXFLAGS = -O2
 endif
 
@@ -33,3 +27,27 @@ AM_LDFLAGS  = @RUBY_LDFLAGS@ @SDL_LDFLAGS@ @IL_LDFLAGS@ @GL_LDFLAGS@
 scenetest_SOURCES = main.cpp \
 md5mesh.cpp md5mesh.h md5mesh_c.cpp 
 
+if BUNDLE_SUPPORT
+all-local:
+	mkdir -p ${srcdir}/sys/
+	rm -f ${srcdir}/sys/script
+	cd ${srcdir}/sys/ && \
+	${LN_S} ../script .
+
+	${top_srcdir}/macosX/mkapp scenetest
+	${top_srcdir}/macosX/fwcopy libkerosin ${top_srcdir}/lib/kerosin/.libs scenetest
+	${top_srcdir}/macosX/fwcopy liboxygen ${top_srcdir}/lib/oxygen/.libs scenetest
+	${top_srcdir}/macosX/fwcopy libzeitgeist ${top_srcdir}/lib/zeitgeist/.libs scenetest
+	${top_srcdir}/macosX/fwcopy libsalt ${top_srcdir}/lib/salt/.libs scenetest
+	${top_srcdir}/macosX/fwcopy librcssnet3D ${top_srcdir}/utility/rcssnet/.libs scenetest liboxygen
+	${top_srcdir}/macosX/plugincopy ${top_srcdir}/plugin/filesystemstd/.libs/filesystemstd.so scenetest
+	${top_srcdir}/macosX/plugincopy ${top_srcdir}/plugin/sexpparser/.libs/sexpparser.so scenetest
+	${top_srcdir}/macosX/plugincopy ${top_srcdir}/plugin/inputsdl/.libs/inputsdl.so scenetest
+else
+all-local:
+	mkdir -p ${srcdir}/sys/
+	rm -f ${srcdir}/sys/script
+	cd ${srcdir}/sys/ && \
+	${LN_S} ../script .
+
+endif
