changed BOOST_THREADS_LIB meta variable added more configure flags

--- a/app/fonttest/Makefile.am
+++ b/app/fonttest/Makefile.am
@@ -8,21 +8,28 @@ LDADD = \
 	${top_srcdir}/lib/kerosin/libkerosin_debug.la \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
-        ${top_srcdir}/lib/salt/libsalt_debug.la \
-	-l@BOOST_THREADS_LIB@
+        ${top_srcdir}/lib/salt/libsalt_debug.la @FREETYPE_LIBADD@ @SDL_LDFLAGS@ @IL_LIBADD@ @GL_LIBADD@ \
+	@BOOST_THREADS_LIB@
+
 fonttest_CXXFLAGS = -O -g -W -Wall
 else
 LDADD = \
 	${top_srcdir}/lib/kerosin/libkerosin.la \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
-        ${top_srcdir}/lib/salt/libsalt.la \
-	-l@BOOST_THREADS_LIB@
-fonttest_CXXFLAGS = -O2
-endif
+        ${top_srcdir}/lib/salt/libsalt.la @FREETYPE_LIBADD@ @SDL_LDFLAGS@ @IL_LIBADD@ @GL_LIBADD@ \
+	@BOOST_THREADS_LIB@
 
-AM_CPPFLAGS = -I${top_srcdir}/lib -I${top_srcdir}/utility @FREETYPE_CPPFLAGS@ @SDL_CPPFLAGS@ @RUBY_CPPFLAGS@
-AM_LDFLAGS = @IL_LDFLAGS@ @SDL_LDFLAGS@ @GL_LDFLAGS@
+fonttest_CXXFLAGS = -O2
+endif 
+
+AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@ @SDL_CPPFLAGS@
+
+if BUNDLE_SUPPORT
+AM_LDFLAGS = @FREETYPE_LIBADD@ @SDL_LIBADD@ @IL_LIBADD@ @GL_LIBADD@ -framework OpenGL
+else
+AM_LDFLAGS = @FREETYPE_LIBADD@ @SDL_LIBADD@ @IL_LIBADD@ @GL_LIBADD@ 
+endif
 
 fonttest_SOURCES = main.cpp 
 
